as2/6.1/modules/ROOT/pages/as2-connector-upgrade-migrate.adoc
= Upgrade AS2 Connector to Version 6.x - Mule 4
:page-aliases: connectors::as2/as2-connector-upgrade-migrate.adoc

Upgrade Anypoint Connector for AS2 (AS2 Connector) from version 5.x to 6.x to take advantage of new features and functionality.

== Supported Upgrade Paths

[%header,cols="50a,50a"]
|===
|From Version | To Version
|5.x |6.x
|===

== Changes

=== 6.1

The *Transfer Mode Configuration* parameter has been added to the `Send Config` class so that you can enable and disable chunked transfer of data when using the *Send* operation.

=== 6.0

AS2 Connector 6.0 contains the following changes:

* Digitally signed copies of outgoing and received messages and their corresponding receipts can be saved for non-repudiation purposes as long as they are configured and enabled on AS2 Connector operations and sources.
* The new Mule source `Non repudiation listener` must be user-configured to persist the non-repudiation information provided by any of the AS2 Connector
operations and sources via a user-defined persistence strategy.
* Certain attribute object fields are renamed and deprecated fields are removed. +
These changes are outlined in <<upgrade-steps,Upgrade Steps>>.

== Requirements

Ensure that you meet the following requirements before you migrate:

* Mule 4.3.0 or later
* Java 8

[[upgrade-steps]]
== Upgrade Steps

Follow these steps to perform the upgrade to AS2 version 6.x:

. Download AS2 Connector 6.x.x from Exchange. 
. Place the appropriate source or operation in the Mule flow you are upgrading.

=== Changes for AS2 Listener and AS2 MDN Listener

There are no changes to the way AS2 Listener and AS2 MDN Listener are used or configured.

=== Changes for Send with Sync MDN and Send with Async MDN operations

The `Send with Sync MDN` and `Send with Async MDN` operations have the following changes:

* An attribute object of type `com.mulesoft.connector.as2.api.AS2MdnAttributes` is changed in version 6.0.0: +
The field `com.mulesoft.connector.as2.api.AS2SendAttributes.as2MdnAttributes` is of type `com.mulesoft.connector.as2.api.AS2MdnAttributes`.
* The MultiMap `dispositionContent` is converted into an object called `DispositionNotification` that splits the information of the disposition-notification part of the MDN into parameters. +
The `DispositionNotification` is in the `DispositionNotificationReport` object.

Amend Mule flows that are using these attributes accordingly.

=== Changes in AS2 MDN Attributes

[%header%autowidth.spread]
|===
|5.x Field Name| 6.x Field Name | 5.x Type | 6.x Type
|dispositionContent |dispositionContent | MultiMap<String, String> | DispositionNotificationReport
|mdnMic | DispositionNotificationReport.DispositionNotification.receivedContentMic | String | String
|mdnMicAlg | DispositionNotificationReport.DispositionNotification.receivedContentMicAlgorithm | HashAlgorithm | HashAlgorithm
|mdnProcessed | DispositionNotificationReport.DispositionNotification.dispositionType | boolean | String
|originalAS2MessageId |  DispositionNotificationReport.DispositionNotification.originalMessageID | String | String
|reportText | Field Removed | String | Field Removed
|===

=== Post Upgrade Steps

After you perform the upgrade steps, follow these steps to complete the upgrade:

. Verify that the connector is working by making sure there are no exceptions on startup and test it against your AS2 partner.
. Notify your partners of any new URL (port) configurations that correspond to the HTTP Listener you are using.

== Troubleshooting

If there are problems with caching the parameters and caching the metadata, try restarting Studio.

== Revert the Upgrade

If it is necessary to revert to the previous version of as2MdnAttributes Connector, change the `as2-connector` dependency version in the project's `pom.xml` file to the previous version.

You must update the project's `pom.xml` file in Anypoint Studio.

== See Also

* https://help.mulesoft.com[MuleSoft Help Center]
